[tool.poetry]
name = "pdlparser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = 'pdlparser', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.0"
pytesseract = "^0.3.8"
opencv-python-headless = "^4.5.3"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
flake8 = "^4.0.1"
mypy = "^0.910"
jupyterlab = "^3.2.0"
matplotlib = "^3.4.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
